[package]
name = "absher-zt-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
futures-channel = "0.3.31"
dashmap = "6.1.0"
defer = "0.2.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
actix-cors = "0.7.1"
pretty_env_logger = "0.5.0"

[dependencies.log]
version = "0.4.29"
features = ["release_max_level_warn"]

[dependencies.actix-web]
version = "4.12.1"
features = [
    "rustls-0_23",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd"
]

[dependencies.actix-ws]
version = "0.3.0"